(20241209) 이민혁 검수사항 반영

--- a/work/IIP_002.html
+++ b/work/IIP_002.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
     <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
-    <script src="../js/biz2/jquery-3.7.1.min.js"></script>
+    <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용원</title>
+    <title>울산광역시 평생교육이용권</title>
 </head>
 <body>
     <header>
@@ -130,7 +130,7 @@
                                     <img src="../images/biz2/ico/ico_pdf.svg" alt="PDF이미지" class="ico-pdf">
                                     시스템 공지 안내문 
                                 </div>   
-                                <button type="button" class="btns ico btn-download">다운로드</button>    
+                                <button type="button" class="btns btn-download">다운로드</button>    
                             </td>
                         </tr>
                     </tbody>
