--- a/work/IIP_301.html
+++ b/work/IIP_301.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
     <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
-    <script src="../js/biz2/jquery-3.7.1.min.js"></script>
+    <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용원</title>
+    <title>울산광역시 평생교육이용권</title>
 </head>
 
 <body>
@@ -95,9 +95,9 @@
                     </colgroup>
                     <tbody>
                         <tr>
-                            <th class="txt-l">추천 교육 노출</th>
+                            <th class="txt-l">학습자명</th>
                             <td>홍길*</td>
-                            <th class="txt-l">추천수</th>
+                            <th class="txt-l">생년월일</th>
                             <td>21.07.**</td>
                         </tr>
                     </tbody>
@@ -130,7 +130,7 @@
                             <th rowspan="2">강좌명</th>
                             <th rowspan="2">분반</th>
                             <th rowspan="2">강좌기간</th>
-                            <th rowspan="2">출석일수/<br>시가/회차</th>
+                            <th rowspan="2">출석일수/<br>시간/회차</th>
                             <th rowspan="2">이수여부</th>
                             <th rowspan="2">이용권구분</th>
                             <th scope="row" colspan="3">사용자정보</th>
