--- a/work/ILP_002.html
+++ b/work/ILP_002.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,9 +13,8 @@
     <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용권</title>
+    <title>울산광역시 평생교육이용원</title>
 </head>
-
 <body>
     <header>
         <div class="logo-area">
@@ -71,86 +69,98 @@
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
                 <span class="arrow">이용권 사용기관</span>
-                <span class="arrow">공지사항(사용기관)</span>
+                <span class="arrow">이용권 사용기관 신청</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">공지사항(사용기관)</h2>
-        </div>        
-        <div class="contents">
-            <div class="search-area">
-                <div class="flex-ac">
-                    <label for="select-box" class="blind">검색조건 선택</label>
-                    <select id="select-box" class="ui-select">
-                        <option value="1">전체</option>
-                        <option value="1">제목</option>
-                        <option value="1">내용</option>
-                    </select>
-                    <div class="search-input">
-                        <label for="search-bar" class="blind"> 공지사항 검색어 입력</label>
-                        <input type="text" id="search-bar">
-                        <button type="button" class="btn-search">검색</button>
-                    </div>
-                </div>
+            <h2 class="page-header-tit">이용권 사용기관 신청</h2>
+            <p class="page-header-desc">평생교육이용권 이용을 위한 사용기관 신청 화면입니다.</p>
+        </div>
+
+        <ul class="steps flex-ac">
+            <li>
+                <span class="step01">1단계</span>
+                <strong>약관동의</strong>
+            </li>
+            <li class="step-arrow"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
+            <li class="active">
+                <span class="step02">2단계</span>
+                <strong>본인인증</strong>
+            </li>
+            <li class="step-arrow disabled"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
+            <li class="disabled">
+                <span class="step03">3단계</span>
+                <strong>신청서 작성</strong>
+            </li>
+            <li class="step-arrow disabled"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
+            <li class="disabled">
+                <span class="step04">4단계</span>
+                <strong>담당자 등록</strong>
+            </li>
+            <li class="step-arrow disabled"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
+            <li class="disabled">
+                <span class="step05">5단계</span>
+                <strong>첨부</strong>
+            </li>
+            <li class="step-arrow disabled"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
+            <li class="disabled">
+                <span class="step06">6단계</span>
+                <strong>작성완료</strong>
+            </li>
+        </ul>
+
+        <hr>
+
+        <div class="top-info-group">
+            <h3>인증 구분</h3>
+        </div>
+        <div class="auth-area">
+            <div class="auth-area-in flex-ac">
+                <button class="ico simple">간편인증</button>
+                <button class="ico joint">공동인증서</button>
+                <button class="ico mo-auth">휴대폰인증</button>
+                <button class="ico i-pin">아이핀(i-pin)</button>
             </div>
-            <div class="top-info-group">
-                <p class="top-info-group-data">총 <strong>6,234</strong>건</p>
-                <label for="select-view" class="blind">노출 조건 선택</label>
-                <select id="select-view">
-                    <option value="1">10건 보기</option>
-                    <option value="2">20건 보기</option>
-                    <option value="3">30건 보기</option>
-                </select>
-            </div>
-            <div class="com-view-table">
-                <table>
-                    <caption>공지사항 안내 테이블</caption>
-                    <colgroup>
-                        <col style="width: 102px;">
-                        <col>
-                        <col style="width: 172px;">
-                    </colgroup>
-                    <thead>
-                        <tr>
-                            <th>번호</th>
-                            <th>제목</th>
-                            <th>작성일</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td class="txt-l">
-                                <a href="#" class="com-view-title"><span class="table-label">공지</span> 지자체 평생교육이용권 시스템 일시중단 안내(9.27~9.28)</a>
-                            </td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div class="com-paging">
-                <button class="prev">이전</button>
-                <button class="on">1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <span class="empty">...</span>
-                <button>120</button>
-                <button class="next">다음</button>
-            </div>
+        </div>
+        <div class="top-info-group">
+            <h3>신청정보</h3>
+        </div>
+        <div class="com-write-table">
+            <table>
+                <caption>신청정보 입력란</caption>
+                <colgroup>
+                    <col style="width: 200px;">
+                    <col>
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th class="txt-l">
+                            <label for="a">이름</label>
+                        </th>
+                        <td>
+                            <input type="text" id="a" class="mw-set">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">
+                            <label for="b">주민등록번호</label>
+                        </th>
+                        <td>
+                            <div class="flex-ac gap-10 mw-set">
+                                <input type="number" id="b" maxlength="6" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
+                                -
+                                <input type="password" id="c" maxlength="7" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="btns-bottom">
+            <a href="javascript:;" class="btn-bd green">이전</a>
+            <a href="javascript:;" class="btns">인증</a>
         </div>
     </div>
     <footer class="wrap">
