--- a/work/LNP_101.html
+++ b/work/LNP_101.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
     <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css" />
-    <script src="../js/biz2/jquery-3.7.1.min.js"></script>
+    <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용원</title>
+    <title>울산광역시 평생교육이용권</title>
 </head>
 
 <body>
@@ -136,7 +136,7 @@
                                     <img src="../images/biz2/ico/ico_pdf.svg" alt="PDF이미지" class="ico-pdf">
                                     2024년 우수 이용자 재충전 신청 매뉴얼_휴대폰.pdf [2273050 byte] 
                                 </div>   
-                                <button type="button" class="btns ico btn-download">다운로드</button>    
+                                <button type="button" class="btns btn-download">다운로드</button>    
                             </td>
                         </tr>
                     </tbody>
