--- a/work/LNP_202.html
+++ b/work/LNP_202.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/biz2/layout.css">
     <link rel="stylesheet" href="../css/biz2/main.css">
     <link rel="stylesheet" href="../css/biz2/style.css">
-    <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css">
+    <link rel="stylesheet" href="../css/biz2/swiper-bundle.min.css" />
     <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
@@ -38,15 +38,21 @@
                         </div>
                     </li>
                     <li>
+                        <span class="tit">사용안내</span>
+                        <div class="link-item">
+                            <a href="#">사용처안내</a>
+                        </div>
+                    </li>
+                    <li>
                         <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
                             <a href="#">사용처 안내</a>
                             <a href="#">사용기관 신청 현황</a>
-                            <a href="#" class="hidden">이용권 사용내역</a>
-                            <a href="#" class="hidden">교육과정 정보</a>
-                            <a href="#" class="hidden">학습자 정보</a>
+                            <a href="#">이용권 사용내역</a>
+                            <a href="#">교육과정 정보</a>
+                            <a href="#">학습자 정보</a>
                             <a href="#">기관 정보 수정</a>
-                            <a href="#" class="hidden">사용기관 연수</a>
+                            <a href="#">사용기관 연수</a>
                             <a href="#">서약서 동의</a>
                         </div>
                     </li>
@@ -56,7 +62,7 @@
                             <a href="#">공지사항</a>
                             <a href="#">자료실</a>
                             <a href="#">자주하는질문</a>
-                            <a href="#">질의응답</a>
+                            <a href="#">문의사항</a>
                         </div>
                     </li>
                 </ul>
@@ -70,86 +76,71 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">이용권 사용기관</span>
-                <span class="arrow">공지사항(사용기관)</span>
+                <span class="arrow">게시판</span>
+                <span class="arrow">자주하는질문</span>
+                <span class="arrow">자주하는질문 상세</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">공지사항(사용기관)</h2>
-        </div>        
-        <div class="contents">
-            <div class="search-area">
-                <div class="flex-ac">
-                    <label for="select-box" class="blind">검색조건 선택</label>
-                    <select id="select-box" class="ui-select">
-                        <option value="1">전체</option>
-                        <option value="1">제목</option>
-                        <option value="1">내용</option>
-                    </select>
-                    <div class="search-input">
-                        <label for="search-bar" class="blind"> 공지사항 검색어 입력</label>
-                        <input type="text" id="search-bar">
-                        <button type="button" class="btn-search">검색</button>
-                    </div>
-                </div>
-            </div>
+            <h2 class="page-header-tit">자주하는질문 상세</h2>
+        </div>
+        <div class="contents qna">
             <div class="top-info-group">
-                <p class="top-info-group-data">총 <strong>6,234</strong>건</p>
-                <label for="select-view" class="blind">노출 조건 선택</label>
-                <select id="select-view">
-                    <option value="1">10건 보기</option>
-                    <option value="2">20건 보기</option>
-                    <option value="3">30건 보기</option>
-                </select>
+                <h3 class="ico">질문</h3>
+                <span>등록일 : 2022-01-07</span>
             </div>
-            <div class="com-view-table">
+            <div class="com-write-table qna-table">
                 <table>
-                    <caption>공지사항 안내 테이블</caption>
-                    <colgroup>
-                        <col style="width: 102px;">
-                        <col>
-                        <col style="width: 172px;">
-                    </colgroup>
+                    <caption>자주하는 질문 상세</caption>
                     <thead>
                         <tr>
-                            <th>번호</th>
-                            <th>제목</th>
-                            <th>작성일</th>
+                            <th>크롬(Chrome)브라우저를 통한 평생교육이용권 신청 시 인증실패 조치방법</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>1</td>
-                            <td class="txt-l">
-                                <a href="#" class="com-view-title"><span class="table-label">공지</span> 지자체 평생교육이용권 시스템 일시중단 안내(9.27~9.28)</a>
+                            <td>
+                                <span class="ico qna-answer">답변</span>
+                                <div class="qna-answer-details">
+                                    안녕하세요.<br>
+                                    국가평생교육진흥원 평생교육이용권실에서 알려드립니다.<br>
+                                    평생교육이용권 신청 본인인증 과정에서 발생할 수 있는 인증실패에 대한 안내 및 조치 방법을 공유 드립니다.<br><br>
+                                    
+                                    인증실패는 크롬(Chrome) 브라우저 신규버전 (80버전)에서 도메인 간 Cookie 활용 금지에 따라 발생하는 상황으로 이에 다른 보안조치를 완료("21.1")한 바 있습니다.
+                                    이에 따라 크롬(Chrome) 브라우저 사용 시 신규 웹페이지 적용을 위하여 과거 웹페이지 접속 기록을 삭제 후 재시도 해주시기 바랍니다.
+                                     ※ 삭제 방법 : 첨부파일 참조<br><br>
+
+                                    아울러 지속적인 인증실패 발생 시 크롬(Chrome)외 브라우저 사용 또는 모바일 앱을 이용한 인증을 권장 드리며, 공동인증서(구 공인인증서)를 이용한 본인인증도 가능하오니 활용하여 주시기 바랍니다. <br><br>
+
+                                    감사합니다.
+                                </div>
                             </td>
-                            <td>2024-10-02</td>
                         </tr>
                         <tr>
-                            <td>2</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 2차 신청 접수 공고</a></td>
-                            <td>2024-10-02</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td class="txt-l"><a href="#" class="com-view-title">[울산광역시] 2024년 울산 평생교육이용권(이용권) 1차 선정자 알림 및 사용 안내</a></td>
-                            <td>2024-10-02</td>
+                            <!-- <span class="qna-attached">첨부파일</span>
+                            <div class="attached-file">
+                                <img src="../images/biz2/ico/ico_pdf.svg" alt="PDF이미지" class="ico-pdf">
+                                시스템 공지 안내문 
+                            </div>   
+                            <button type="button" class="btns btn-download">다운로드</button>    -->
+                            <td>
+                                <span class="qna-attached">첨부파일</span>
+                                <div class="add-file">
+                                    <div class="attached-file">
+                                        <img src="../images/biz2/ico/ico_pdf.svg" alt="PDF이미지" class="ico-pdf">
+                                        인터넷접속기록삭제방법.hwp [110288 byte]
+                                    </div>   
+                                    <button type="button" class="btns btn-download">다운로드</button>
+                                </div>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <div class="com-paging">
-                <button class="prev">이전</button>
-                <button class="on">1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <span class="empty">...</span>
-                <button>120</button>
-                <button class="next">다음</button>
+            <div class="btns-bottom">
+                <a href="javascript:;" class="btns">목록</a>
             </div>
         </div>
     </div>
@@ -184,4 +175,5 @@
         </div>
     </footer>
 </body>
+
 </html>
